--- a/apps/node-app/package.json
+++ b/apps/node-app/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "@types/node": "^24.3.0",
+    "@types/node": "^20",
     "@types/pg": "^8.15.5",
     "@types/request": "^2.48.13",
     "cross-env": "^10.0.0",
@@ -8,17 +8,21 @@
     "typescript": "^5.9.2"
   },
   "scripts": {
-    "dev": "cross-env TS_NODE_TRANSPILE_ONLY=1 ts-node src/index.ts",
+    "dev": "cross-env TS_NODE_TRANSPILE_ONLY=1 ts-node -r tsconfig-paths/register src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@goldie/models": "1.0.0",
+    "@goldie/models": "file:../../packages/models",
     "dotenv": "^17.2.1",
+    "module-alias": "^2.2.3",
     "pg": "^8.16.3",
     "request": "^2.88.2"
   },
   "ts-node": {
     "transpileOnly": true
+  },
+  "_moduleAliases": {
+    "@deribit": "../external/deribit-api-clients/typescript-node/dist"
   }
 }
