--- a/apps/node-app/tsconfig.json
+++ b/apps/node-app/tsconfig.json
@@ -4,12 +4,23 @@
   ],
   "compilerOptions": {
     "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "types": [
       "node"
     ],
+    "rootDir": "src",
+    "outDir": "dist",
+    "declaration": false,
+    "strict": true,
+    "sourceMap": true,
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "@deribit/*": [
+        "../../external/deribit-api-clients/typescript-node/dist/*"
+      ]
+    }
   }
 }
