--- a/apps/node-app/package.json
+++ b/apps/node-app/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/pg": "^8.15.5",
     "@types/request": "^2.48.13",
@@ -8,13 +10,15 @@
     "typescript": "^5.9.2"
   },
   "scripts": {
-    "dev": "cross-env TS_NODE_TRANSPILE_ONLY=1 ts-node -r tsconfig-paths/register src/index.ts",
+    "dev": "cross-env TS_NODE_TRANSPILE_ONLY=1 ts-node -r tsconfig-paths/register src/main.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
   },
   "dependencies": {
     "@goldie/models": "file:../../packages/models",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "pg": "^8.16.3",
     "request": "^2.88.2"
