--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2"
+  },
+  "scripts": {
+    "build": "npm run -w @goldie/models build && npm run -w node-app build"
   }
 }
