--- a/apps/node-app/package.json
+++ b/apps/node-app/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@goldie/models": "file:../../packages/models",
+    "@slack/bolt": "^4.4.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
